--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
         "autoprefixer": "^10.4.16",
         "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
+        "laravel-echo": "^1.15.3",
         "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.31",
+        "pusher-js": "^8.3.0",
         "sass": "^1.56.1",
         "tailwindcss": "^3.3.3",
         "vite": "^4.0.0",
