--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "cohensive/oembed": "^0.17.0",
+        "embed/embed": "^4.4",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
         "laravel/framework": "^10.10",
@@ -14,6 +16,7 @@
         "laravel/ui": "^4.2",
         "livewire/livewire": "^3.1",
         "munafio/chatify": "^1.6",
+        "openai-php/laravel": "^0.7.8",
         "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
