--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
         "tailwindcss": "^3.3.3",
         "vite": "^4.0.0",
         "vue": "^3.2.37"
+    },
+    "dependencies": {
+        "simple-peer": "^9.11.1"
     }
 }
