--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
+        "animate.css": "^4.1.1",
+        "jquery": "^3.7.1",
         "simple-peer": "^9.11.1"
     }
 }
